<resources>
    <string name="app_name">高尔夫学生版</string>
    <string name="login_text1">请输入手机号</string>
    <string name="login_text2">输入验证码</string>
    <string name="login_text3">获取验证码</string>
    <string name="login_text4">进入GolfLife</string>
    <string name="login_text5">我已阅读并同意</string>
    <string name="login_text6">服务条款</string>
    <string name="login_text7">其他方式登陆</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_chat">消息</string>
    <string name="tab_my">我的</string>
    <string name="calendar_date">2016年12月</string>
    <string name="event">赛事</string>
    <string name="course">课程</string>
    <string name="havecourse">有课</string>
    <string name="recommend">今日推荐</string>
    <string name="todayPlan">今日安排</string>
    <string name="home_text1">今日无课程安排</string>
    <string name="home_text2">预约学员上课</string>
    <string name="home_text3">测试数据</string>
    <string name="home_text4">提高潜在球技</string>
    <string name="home_text5">学员档案</string>
    <string name="home_text6">方便管理查看</string>
    <string name="home_text7">行业日历</string>
    <string name="home_text8">业内动态掌握</string>
    <string name="home_text9">赛事活动</string>
    <string name="home_text10">查看各地赛事</string>
    <string name="home_text11">课程预约</string>
    <string name="home_text12">网上预约课程</string>
    <string name="home_text13">达利承认美巡赛曾喝酒 依然拿好成绩</string>
    <string name="home_text14">拍摄时请确保记分卡</string>
    <string name="home_text15">边框完整 字体清晰 亮度均匀</string>
    <string name="home_text16">不再提示</string>
    <string name="home_text17">立即上传</string>
    <string name="home_text18">Golf资讯</string>
    <string name="home_text19">球场名称</string>
    <string name="home_text20">打球日期</string>
    <string name="home_text21">上传记分卡</string>
    <string name="home_text22">注:</string>
    <string name="home_text23">一张照片为一个9洞</string>
    <string name="home_text24">上传</string>
    <string name="home_text25">Test1</string>
    <string name="home_text26">技术数据达标标准测试</string>
    <string name="home_text27">系统评测球技分数如何提高</string>
    <string name="home_text28">模板预览</string>
    <string name="home_text29">更多测试模板 努力调试中</string>
    <string name="home_text30">测试球员</string>
    <string name="home_text31">点击填写</string>
    <string name="home_text32">测试种类</string>
    <string name="home_text33">9洞</string>
    <string name="home_text34">18洞</string>
    <string name="home_text35">未添加测试人员姓名不能进行测试</string>
    <string name="home_text36">开始</string>
    <string name="home_text37">通讯录好友</string>
    <string name="home_text38">GolfLife好友</string>
    <string name="home_text39">球员名称</string>
    <string name="home_text40">被测试者姓名不能为空</string>
    <string name="home_text41">历史测试球员</string>
    <string name="home_text42">开球上球道</string>
    <string name="home_text43">标准杆上果岭</string>
    <string name="home_text44">切杆救球</string>
    <string name="home_text45">沙坑救球</string>
    <string name="home_text46">未出现</string>
    <string name="home_text47">是</string>
    <string name="home_text48">否</string>
    <string name="home_text49">左右滑动切换球洞</string>
    <string name="home_text50">结束</string>
    <string name="home_text51">当次测试成绩</string>
    <string name="home_text52">测试者：</string>
    <string name="home_text53">初级测试</string>
    <string name="home_text54">暂无历史纪录</string>
    <string name="home_text55">学员名称</string>
    <string name="home_text56">手机号码</string>
    <string name="home_text57">学员种类</string>
    <string name="home_text58">意向学员</string>
    <string name="home_text59">合约学员</string>
    <string name="home_text60">确认添加</string>
    <string name="home_text61">学员姓名不能为空</string>
    <string name="home_text62">方便约课 号码不能为空</string>
    <string name="home_text63">套餐</string>
    <string name="home_text64">选择套餐</string>
    <string name="home_text65">暂无行业动态</string>
    <string name="home_text66">暂无视频资讯</string>
    <string name="home_text67">主办方:</string>
    <string name="home_text68">课程内容</string>
    <string name="home_text69">课程种类</string>
    <string name="home_text70">上课时间</string>
    <string name="home_text71">打位信息</string>
    <string name="home_text72">取消预约</string>
    <string name="home_text74">联系他</string>
    <string name="home_text75">选择学员</string>
    <string name="home_text76">选择课程</string>
    <string name="home_text77">选择区域</string>
    <string name="home_text78">选择打位</string>
    <string name="home_text79">时间选择</string>
    <string name="home_text80">已选择0个时段</string>
    <string name="home_text81">确认预约</string>
    <string name="home_text82">回到今天</string>
    <string name="home_text83">暂无合约课程</string>
    <string name="home_text84">听说课程越多 进步越快</string>
    <string name="home_text86">查看更多</string>
    <string name="home_text87">精彩高球活动</string>
    <string name="home_text88">TPI测试</string>
    <string name="home_text89">TPI身体姿势测试</string>
    <string name="home_text90">系统评测身体姿势是否标准</string>
    <string name="home_text91">返回</string>
    <string name="released_text1">发布活动</string>
    <string name="released_text2">活动发布</string>
    <string name="released_text3">赛事名称</string>
    <string name="released_text4">(如: 西丽湖高尔夫联谊赛)</string>
    <string name="released_text5">开始日期</string>
    <string name="released_text6">结束日期</string>
    <string name="released_text7">开球时间</string>
    <string name="released_text8">赛事地址</string>
    <string name="released_text9">费用设置</string>
    <string name="released_text10">人数设置</string>
    <string name="released_text11">人数不限</string>
    <string name="released_text12">允许陪同嘉宾</string>
    <string name="released_text13">访问密码</string>
    <string name="released_text14">联系电话</string>
    <string name="released_text15">活动金额</string>
    <string name="released_text16">线上支付金额</string>
    <string name="released_text17">设置同行人数</string>
    <string name="released_text18">陪同嘉宾是否收费</string>
    <string name="released_text19">陪同嘉宾费用</string>
    <string name="released_text20">点此设置</string>
    <string name="released_text21">设置4位数密码</string>
    <string name="released_text22">请填写活动简介(选填)。详细精彩的活动描述可以吸引更多人喔！</string>
    <string name="released_text23">高级设置</string>
    <string name="released_text24">预览</string>
    <string name="released_text25">立即发布</string>
    <string name="released_text26">0755-86707237</string>
    <string name="released_text27">报名开始时间</string>
    <string name="released_text28">报名截止时间</string>
    <string name="released_text29">自定义主办方</string>
    <string name="released_text30">主办方</string>
    <string name="released_text31">隐藏报名名单</string>
    <string name="released_text32">隐藏照片墙</string>
    <string name="released_text33">开启后，活动详情页不显示报名者名称</string>
    <string name="released_text34">开启后，活动详情页不显示照片墙</string>
    <string name="released_text35">已报名</string>
    <string name="released_text36">赛事时间</string>
    <string name="released_text37">活动地址</string>
    <string name="released_text38">活动介绍</string>
    <string name="released_tex39">添加图片</string>
    <string name="released_text40">拍照</string>
    <string name="released_text41">从相册添加</string>
    <string name="released_text42">推荐主题图片</string>
    <string name="released_text43">报名者需填写</string>
    <string name="released_text45">客服电话：</string>
    <string name="my_text1">我的预约</string>
    <string name="my_text2">我的课程</string>
    <string name="my_text3">我的计分卡</string>
    <string name="my_text4">我的活动</string>
    <string name="my_text5">我的收藏</string>
    <string name="my_text6">教练认证</string>
    <string name="my_text7">邀请球友</string>
    <string name="my_text8">设置</string>
    <string name="my_text9">暂无预约</string>
    <string name="my_text10">预约的课程 都在这里显示</string>
    <string name="my_text11">暂无课程</string>
    <string name="my_text12">听说课程越多 进步越快</string>
    <string name="my_text13">您还没有上传计分卡</string>
    <string name="my_text14">拍摄计分卡照片 我们帮你转换成电子计分卡显示在这里</string>
    <string name="my_text17">暂无收藏</string>
    <string name="my_text18">列表这么空，快去收藏吧！</string>
    <string name="my_text19">邀请好友</string>
    <string name="my_text20">预约</string>
    <string name="my_text21">已预约</string>
    <string name="my_text22">已完成</string>
    <string name="my_text23">课程名字</string>
    <string name="my_text24">预约日期</string>
    <string name="my_text25">预约时间</string>
    <string name="my_text26">预约教练</string>
    <string name="my_text27">预约打位</string>
    <string name="my_text28">联系学院</string>
    <string name="my_text29">联系教练</string>
    <string name="my_text30">暂无学员</string>
    <string name="my_text31">工作日9:00-18:00上传后</string>
    <string name="my_text32">30分钟</string>
    <string name="my_text33">即可返回结果</string>
    <string name="my_text34">注:</string>
    <string name="my_text35">非工作时间上传的记分卡</string>
    <string name="my_text36">当下个工作日返回结果</string>
    <string name="my_text37">主办方使用高尔夫人生APP扫描二维码验票</string>
    <string name="my_text38">取消报名</string>
    <string name="my_text39">我的球队</string>
    <string name="my_text40">我的钱包</string>
    <string name="set_text1">编辑个人资料</string>
    <string name="set_text2">新消息通知</string>
    <string name="set_text3">清除缓存</string>
    <string name="set_text4">意见反馈</string>
    <string name="set_text5">关于我们</string>
    <string name="set_text6">当前版本</string>
    <string name="set_text7">切换版本</string>
    <string name="set_text8">退出账号</string>
    <string name="set_text9">学员版</string>
    <string name="set_text10">头像</string>
    <string name="set_text11">昵称</string>
    <string name="set_text12">账号</string>
    <string name="set_text13">性别</string>
    <string name="set_text14">球龄</string>
    <string name="set_text15">地区</string>
    <string name="set_text16">提交</string>
    <string name="set_text17">写下您的宝贵意见</string>
    <string name="set_text18">切换成教练</string>
    <string name="set_text19">定位到的位置</string>
    <string name="set_text20">全部</string>
    <string name="set_text21">在EGOLF上扫描添加我为好友</string>
    <string name="set_text22">任职院校</string>
    <string name="set_text23">教龄</string>
    <string name="set_text24">个人简介</string>
    <string name="set_text25">所获成就</string>
    <string name="set_text26">提交申请</string>
    <string name="set_text27">认证中 请耐心等待</string>
    <string name="set_text28">教练资格证认证成功</string>
    <string name="set_text29">认证信息</string>
    <string name="set_text30">所属教学中心</string>
    <string name="set_text31">恭喜你，认证信息成功</string>
    <string name="set_text32">你提交的认证资料已通过审核</string>
    <string name="set_text33">已认证</string>
    <string name="video_text1">发表评论</string>
    <string name="video_text2">优质评论将会优先显示</string>
    <string name="video_text3">发表评论</string>
    <string name="video_text4">上传视频进度</string>
    <string name="video_text5">下载视频进度</string>
    <string name="video_text6">编辑</string>
    <string name="video_text7">上传</string>
    <string name="video_text9">删除</string>
    <string name="video_text10">视频名字</string>
    <string name="video_text11">添加标签</string>
    <string name="video_text12">暂无下载视频</string>
    <string name="video_text13">下载</string>
    <string name="video_text14">这里的视频可以分析并分析给好友快去拍摄一个挥杆视频吧</string>
    <string name="video_text15">暂无上传视频</string>
    <string name="video_text16">分享</string>
    <string name="video_text17">云端暂无视频</string>
    <string name="video_text18">上传过的视频将在这里显示</string>
    <string name="video_text19">暂无视频</string>
    <string name="video_text20">这里的视频都可以学习并分享给好友</string>
    <string name="video_text21">快来</string>
    <string name="video_text22">点击</string>
    <string name="video_text23">图片立即刷新吧</string>
    <string name="chat_text1">新的朋友</string>
    <string name="chat_text2">手机号添加</string>
    <string name="chat_text3">扫描二维码添加</string>
    <string name="chat_text4">搜索：</string>
    <string name="chat_text23">备注</string>
    <string name="chat_text24">取消</string>
    <string name="chat_text27">删除此人</string>
    <string name="chat_text29">添加合约</string>
    <string name="redident_test">常住测试</string>
    <string name="resident_info">常住理论身体姿势测评</string>
    <string name="resident_qaq">常住评测身体机能如何矫正</string>
    <string name="resident_sport">常住体育</string>
</resources>