<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_novideo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_text19"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorGray"/>
        <TextView
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/video_text20"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorGray9"/>
        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_text21"
                android:textSize="14sp"
                android:textColor="@color/colorGray9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_text22"
                android:textSize="14sp"
                android:textColor="@color/colorOrange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_text23"
                android:textSize="14sp"
                android:textColor="@color/colorGray9"/>
        </LinearLayout>


    </LinearLayout>
    <com.glorystudent.widget.PullToRefreshLayout
        android:id="@+id/refresh_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/refresh_head" />

        <com.glorystudent.widget.PullableNoUpListView
            android:id="@+id/teach_video_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include layout="@layout/load_more" />

    </com.glorystudent.widget.PullToRefreshLayout>
</LinearLayout>