<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/add_contract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_btn_pop"
        android:text="@string/chat_text29"
        android:textSize="14sp"
        android:textColor="@drawable/selector_pup_color"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_btn_pop"
        android:text="@string/chat_text27"
        android:textSize="14sp"
        android:textColor="@drawable/selector_pup_color"/>

    <Button
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_btn_pop"
        android:text="@string/chat_text23"
        android:textSize="14sp"
        android:textColor="@drawable/selector_pup_color"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_btn_pop"
        android:text="@string/chat_text24"
        android:textSize="14sp"
        android:textColor="@drawable/selector_pup_color"/>
</LinearLayout>