<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray4">
    <!--标题栏-->
    <LinearLayout
        android:id="@id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="12dp"
                android:src="@drawable/back_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="测评"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="12dp"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/home_text30"
        android:textSize="15sp"
        android:textColor="@color/colorOrange"/>
    <TextView
        android:id="@+id/tv_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@null"
        android:text="@string/home_text31"
        android:textSize="15sp"
        android:textColor="@color/colorGray9"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/home_text32"
        android:textSize="15sp"
        android:textColor="@color/colorOrange"/>
    <RadioGroup
        android:id="@+id/rg_choose_hole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_nine_hole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:text="@string/home_text33"
            android:button="@null"
            android:textSize="15sp"
            android:textColor="@drawable/selector_tv_tvcolor"
            android:background="@drawable/selector_rb_bg"/>
        <RadioButton
            android:id="@+id/rb_eighteen_hole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_text34"
            android:button="@null"
            android:textSize="15sp"
            android:textColor="@drawable/selector_tv_tvcolor"
            android:background="@drawable/selector_rb_bg"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/home_text36"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_btn_startgradient"/>
</LinearLayout>