<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/item_horizontal_line2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/ll_address_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_home_contacts"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/home_text37"
                android:textSize="14sp"
                android:textColor="@color/colorOrange"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorGray13"/>
        <LinearLayout
            android:id="@+id/ll_golf_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_home_egolf"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/home_text38"
                android:textSize="14sp"
                android:textColor="@color/colorOrange"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/item_horizontal_line2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_text39"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textSize="14sp"
            android:textColor="@color/primaryColor"/>
        <EditText
            android:id="@+id/et_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_text40"
            android:textColorHint="@color/colorGray9"
            android:textSize="15sp"
            android:textColor="@color/primaryColor"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/item_horizontal_line2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text41"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:textColor="@color/colorGray"/>
</LinearLayout>